crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_arrow.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: snapshot_attrs(&api.arrow_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "arrow",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
