crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_checkbox_checked.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.checkbox_item_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "checkbox-item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "menu-item-bravo",
            ),
        ),
        (
            Role,
            String(
                "menuitemcheckbox",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
