crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_checkbox_disabled.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&service(Props::new().id(\"menu\").disabled_keys(BTreeSet::from([key(\"bravo\")]))).connect(&|_|\n{}).checkbox_item_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "checkbox-item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "menu-item-bravo",
            ),
        ),
        (
            Role,
            String(
                "menuitemcheckbox",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
