crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_item_group.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.item_group_attrs(&key(\"group\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-group",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "menu-group-group-label",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
