crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_item_group_label.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.item_group_label_attrs(&key(\"group\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-group-label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Id,
            String(
                "menu-group-group-label",
            ),
        ),
    ],
    styles: [],
}
