crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_item_indicator.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.item_indicator_attrs(&key(\"save\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "menu-item-save-indicator",
            ),
        ),
    ],
    styles: [],
}
