crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_item_text.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.item_text_attrs(&key(\"save\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Id,
            String(
                "menu-item-save-text",
            ),
        ),
    ],
    styles: [],
}
